--- a/src/components/Calc/Calc.css
+++ b/src/components/Calc/Calc.css
@@ -27,3 +27,11 @@
   height: 50px;
   background-color: white;
 }
+.output {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 110px;
+  height: 50px;
+  background-color: rgb(29, 231, 29);
+}
